# lab_7

./: CMakeLists.txt  KNN.cpp  KNN.h  MinMaxNormalizer.cpp  MinMaxNormalizer.h  Normalizer.h  Point.cpp  Point.h  SumNormalizer.cpp  SumNormalizer.h  main.cpp
